# BuildYourRAG

./: .env.example  .gitignore  README.md  pyproject.toml  start
src/: app.py  styles.css
src/agents/: agent.py
src/agents/examples/: generic.yaml  myphd.yaml
src/configs/: config.yaml  extract_kit_config.yaml
src/database/: collection.py  doc_processing.py  knowledge_graph.py  utils.py
src/models/: embedding.py  generation.py
src/rag/: __init__.py  generation_model.py  generator.py  pipeline.py  retriever.py  router.py
src/server/: main.py
src/templates/: answering.py  data_generation.py  processing.py  router.py  test.py
src/tests/: end2end.py  unit.py
